--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
-
 {
   "name": "skycast-2d",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@gsap/react": "^2.1.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "echarts": "^5.5.0",
+    "echarts-for-react": "^3.0.2",
+    "gsap": "^3.12.5",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.344.0",
-    "gsap": "^3.12.5",
-    "@gsap/react": "^2.1.0",
-    "echarts": "^5.5.0",
-    "echarts-for-react": "^3.0.2"
+    "three": "^0.182.0"
   },
   "scripts": {
     "start": "vite",
@@ -18,10 +20,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "vite": "^5.1.4",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.3.3"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4"
   }
 }
